kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: stitrace/nginx-kubernates-intro:0.0.2
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: app
          mountPath: /var/www/localhost/htdocs
      volumes:
      - name: app
        emptyDir: {}
      serviceAccount: default
